--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,27 @@ vcpkg_installed/
 # backup files
 *~
 *.orig
+
+# Video files
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.webm
+
+# Image directories and frame folders
+*_frames/
+combined_frames/
+combined_frames_clean/
+joshscripts/**/reconstruction*/
+joshscripts/**/test_output/
+
+# Python cache and virtual environments
+__pycache__/
+venv/
+env/
+.venv/
+*.pyc
+
+# Third-party code (ignore local modifications)
+src/thirdparty/
