--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ benchmark/reconstruction/runs/
 doc/_build
 vcpkg_installed/
 
+
 # Compiled Object files
 *.slo
 *.lo
@@ -67,6 +68,7 @@ combined_frames/
 combined_frames_clean/
 joshscripts/**/reconstruction*/
 joshscripts/**/test_output/
+joshscripts/**/panoramas/
 
 # Python cache and virtual environments
 __pycache__/
@@ -77,3 +79,5 @@ env/
 
 # Third-party code (ignore local modifications)
 src/thirdparty/
+paul/joshscript_aframe/panoramas2/
+paul/joshscript_aframe/panoramas/
