did stuff for northcode field + geolocation extraction process

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ joshscripts/**/reconstruction*/
 joshscripts/**/test_output/
 joshscript_aframe/panoramas/
 joshscript_aframe/panoramas2/
+joshscript_aframe/Camera02/
 
 # Python cache and virtual environments
 __pycache__/
@@ -82,3 +83,6 @@ env/
 src/thirdparty/
 paul/joshscript_aframe/panoramas2/
 paul/joshscript_aframe/panoramas/
+paul/joshscripts/Camera02/frames/
+joshscripts/Camera02/frames/
+joshscripts/Camera02/masks/
